<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSendEmail"
            style="@style/btn_style"
            android:text="@string/send_email"/>

        <Button
            android:id="@+id/btnSyncHttp"
            style="@style/btn_style"
            android:text="@string/sync_http"/>

        <Button
            android:id="@+id/btnAsyncHttp"
            style="@style/btn_style"
            android:text="@string/async_http2"/>

    </LinearLayout>

</ScrollView>